#
# Copyright (C) 2022 Purism SPC
#
# This file is part of Calls.
#
# Calls is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Calls is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Calls.  If not, see <http://www.gnu.org/licenses/>.
#
# Author: Evangelos Ribeiro Tzaras <devrtz@fortysixandtwo.eu>
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

gtklistmodel_sources = files([
 'gtkmodels.h',
 'gtkcustomfilter.c', 'gtkcustomfilter.h',
 'gtkcustomsorter.c', 'gtkcustomsorter.h',
 'gtkfilter.c', 'gtkfilter.h',
 'gtkfilterlistmodel.c', 'gtkfilterlistmodel.h',
 'gtkflattenlistmodel.c', 'gtkflattenlistmodel.h',
 'gtkintl.h',
 'gtkprivate.h',
 'gtkrbtree.c',
 'gtkrbtreeprivate.h',
 'gtkslicelistmodel.c', 'gtkslicelistmodel.h',
 'gtksorter.c', 'gtksorter.h',
 'gtksortlistmodel.c', 'gtksortlistmodel.h',
 'gtktypebuiltins.c', 'gtktypebuiltins.h',
 ])
